# diordered-circuits

./: .gitignore  environment.yml  readme.md  structure.txt
.skill/: SKILL.md
learning/: .SKILL.md  .gitignore  README.md  environment.yml  pyproject.toml
learning/.todo/: TODO.md
learning/configs/experiments/: vafidis_toy.yaml
learning/notebooks/: Vafidis.ipynb
learning/original/: EB_synapses.py  fly_rec.py  generate_plots.py  multinet_plots.py  run_simulation.py  stability.py  utilities.py
learning/reports/notes/: codex_centered_hand_shifted_signed.csv  codex_centered_hand_shifted_signed_k2.csv  codex_pre_fix_hand_shifted.csv  hand_shifted_hr_diagnostic.csv  hand_shifted_hr_diagnostic_post_fix.csv  hand_shifted_hr_diagnostic_signed_k1_post_hr.csv  hand_shifted_hr_diagnostic_signed_post_hr.csv  hand_shifted_hr_diagnostic_wide.csv  learned_weight_matrix_failure_diagnostic.md  vafidis2022_extraction.json  vafidis2022_paper.txt  vafidis_toy_diagnostic_sweep.csv  vafidis_toy_diagnostic_sweep.json  vafidis_toy_experiment_guidance.md  vafidis_toy_hr_scaling_fix.md  vafidis_toy_implementation_audit.md
learning/runs/vafidis_toy/20260702-194936_vafidis_toy_11/: config_resolved.yaml  test_metrics.json  training_history.npz  velocity_gain_history.npz
learning/scripts/: clean_runs.py  inspect_run.py
learning/src/learning/: __init__.py
learning/tests/: test_angles.py  test_metrics.py  test_predictive_local_plasticity.py  test_shapes.py  test_smoke_vafidis_toy.py  test_vafidis_dynamics.py  test_vafidis_state_init.py  test_visual_input.py  test_weight_analysis.py
(+181 files in other folders)
