[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vafidis-learning-toy"
version = "0.1.0"
description = "Vafidis-style predictive local plasticity toy model"
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "numpy",
  "PyYAML",
  "scipy",
  "tqdm",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

